# kdcube-ai-app

./: .gitignore  README.md
app/ai-app/services/kdcube-ai-app/: new_requeirements.txt  req.txt  req_backup.txt  requirements-chat.txt  requirements-kb.txt  requirements-orchestrator.txt  requirements.txt  setup.cfg
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/chat/: emitters.py  inventory.py  processor.py  reg.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/knowledge_base/: README.md  core.py  kb_debug.py  processor.py  search.py  storage.py  tenant.py  tfidf.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/middleware/: accounting.py  auth.py  gateway.py  simple_idp.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/models_hub/: app.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/apps/utils/: logging_config.py  util.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/auth/: AuthManager.py  OAuthManager.py  auth-README.md  sessions.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/auth/implementations/: cognito.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/infra/: namespaces.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/readme/: DB-OPS-README.md  compose-persistence.md
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/storage/: distributed_locks.py  storage.py
app/ai-app/services/kdcube-ai-app/kdcube_ai_app/tools/: adaptive_extract.py  content_type.py  crawler.py  datasource.py  extract.py  fetch.py  file_text_extractor.py  parser.py  processing.py  reflection.py  serialization.py
kubernetes/: Readme.md  (+2 more)
(+239 files in other folders)
