# SPDX-License-Identifier: MIT
# Copyright (c) 2025 Elena Viter

[metadata]
name = kdcube-ai-app
version = 0.1.0
description = KDCube AI App
long_description = file: README.md
long_description_content_type = text/markdown
author = Elena Viter
author_email = lena@nestlogic.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    python-dotenv
    openai
    psycopg[binary]

[options.extras_require]
# "pip install kdcube-ai-app[examples]"
# the extras dependencies will be installed. For example, notebooks need jupyter.
examples =
    jupyter
    notebook
    matplotlib
    pygments

tests =
    pytest
    coverage

[options.entry_points]
console_scripts =
    deploy-db = kdcube_ai_app.bin.cli:main
